--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1,5 +1,6 @@
 /*
   The common styles
+  백그라운드 및 폰트 색깔 변경하려면 *수정* 찾아서 수정할 것!
 */
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Source+Sans+Pro:wght@400;600;900&display=swap');
 
@@ -646,7 +647,14 @@ $sidebar-display: "sidebar-display";
   overflow-y: auto;
   width: $sidebar-width;
   z-index: 99;
-  background: var(--sidebar-bg);
+  // background: var(--sidebar-bg); // 수정
+  //* img 사용 시
+  // background-image: url('assets/img/sidebar-bg-img.png'); /*사용하고 싶은 이미지 경로*/
+  // background-size: cover;  /*이미지의 size가 보여질 부분의 사이즈와 다른 경우에는 이미지 크기를 꽉차게 만든다 */
+  // background-repeat: no-repeat;
+  background: #FFA17F;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #00223E, #FFA17F);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #00223E, #FFA17F); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
@@ -663,7 +671,8 @@ $sidebar-display: "sidebar-display";
     &:hover {
       @include no-text-decoration;
 
-      color: var(--sidebar-active-color) !important;
+      // color: var(--sidebar-active-color) !important; // 수정
+      color: #CBC0D3 !important;
     }
   }
 
@@ -673,7 +682,7 @@ $sidebar-display: "sidebar-display";
       width: 6rem;
       height: 6rem;
       border-radius: 50%;
-      border: 2px solid rgba(222, 222, 222, 0.7);
+      border: none; // 수정
       overflow: hidden;
       transform: translateZ(0); // fixed the zoom in Safari
       -webkit-transition: border-color 0.35s ease-in-out;
@@ -708,13 +717,15 @@ $sidebar-display: "sidebar-display";
       font-weight: 900;
       font-size: 1.5rem;
       letter-spacing: 0.5px;
-      color: rgba(134, 133, 133, 99%);
+      // color: rgba(134, 133, 133, 99%); // 수정
+      color: #979dac;
     }
   }
 
   .site-subtitle {
     font-size: 95%;
-    color: var(--sidebar-muted-color);
+    // color: var(--sidebar-muted-color); // 수정
+    color: #7d8597;
     line-height: 1.2rem;
     word-spacing: 1px;
     margin: 0.5rem 1.5rem 0.5rem 1.5rem;
@@ -738,11 +749,13 @@ $sidebar-display: "sidebar-display";
 
     &.active {
       .nav-link {
-        color: var(--sidebar-active-color);
+        // color: var(--sidebar-active-color); // 수정 
+        color: #CBC0D3;
       }
     }
 
     &:not(.active) > a {
+      color: #9A8C98;
       @extend %clickable-transition;
     }
   }
